Add some flair &#x1f43b;

--- a/corpman/harness.html
+++ b/corpman/harness.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset=UTF-8>
+<title>&#x1f43b; &sdot; Grizzly &sdot;</title>
 <script>
 let limit_tmr, closed_tmr, sub, time_limit = Number(location.hash.substr(1));
 let req_url = '/first_test';
