Add support for dynamic responses

--- a/corpman/harness.html
+++ b/corpman/harness.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=UTF-8>
-<title>&#x1f43b; &sdot; Grizzly &sdot;</title>
+<title>&#x1f43b; &sdot; Grizzly &sdot; &#x1f98a;</title>
 <script>
 let limit_tmr, closed_tmr, sub, time_limit = Number(location.hash.substr(1));
 let req_url = '/first_test';
