--- a/corpman/harness.html
+++ b/corpman/harness.html
@@ -7,10 +7,20 @@
 function grz_dump(msg){
   dump('[grizzly harness][' + new Date().toGMTString() + '] ' + msg);
 }
-let limit_tmr, closed_tmr, sub, time_limit = Number(location.hash.substr(1));
+let limit_tmr, close_after, closed_tmr, sub, time_limit;
+let kvps = location.hash.substr(1).split(",")
+for (let entry in kvps) {
+  let kv = kvps[entry].split("=");
+  if (kv[0] == "timeout") {
+    time_limit = Number(kv[1]);
+  }
+  else if (kv[0] == "close_after") {
+    close_after = Number(kv[1]);
+  }
+}
 let req_url = '/first_test';
 let prev_url = null;
-if (time_limit <= 0) {
+if (time_limit == undefined || time_limit <= 0) {
   grz_dump('No time limit given, using default of 5s\n');
   time_limit = 5000;
 } else {
@@ -18,6 +28,9 @@ if (time_limit <= 0) {
 }
 let main = function(){
   let is_done = false;
+  if (close_after != undefined) {
+    close_after--;
+  }
   sub = open(req_url, 'Grizzly Fuzz');
   sub.addEventListener('beforeunload', function(){
     closed_tmr = setInterval(function(){
@@ -26,7 +39,12 @@ let main = function(){
         clearInterval(closed_tmr);
         is_done = true;
         grz_dump('Test case closed itself\n');
-        setTimeout(main, 0);
+        if (close_after != undefined && close_after < 1) {
+          window.close();
+        }
+        else {
+          setTimeout(main, 0);
+        }
       }
     }, 10);
   });
@@ -53,7 +71,12 @@ let main = function(){
         grz_dump('Closing test case\n');
         sub.close();
       }
-      setTimeout(main, 0);
+      if (close_after != undefined && close_after < 1) {
+        window.close();
+      }
+      else {
+        setTimeout(main, 0);
+      }
     }
   }, time_limit);
   req_url = '/next_test';
