--- a/grizzly/corpman/harness.html
+++ b/grizzly/corpman/harness.html
@@ -4,95 +4,93 @@
 <meta charset=UTF-8>
 <title>&#x1f43b; &sdot; Grizzly &sdot; &#x1f98a;</title>
 <script>
-function grzDump(msg){
-  dump('[grizzly harness][' + new Date().toGMTString() + '] ' + msg);
+function grzDump(msg) {
+  dump('[grizzly harness][' + new Date().toGMTString() + '] ' + msg)
 }
 
-function setBanner(msg){
-  try { document.getElementById('status').innerHTML = msg; } catch(e){}
+function setBanner(msg) {
+  try { document.getElementById('status').innerHTML = msg } catch(e) { grzDump('setBanner error: '+e) }
 }
 
-let limit_tmr, close_after, cur_loc, reloads, sub, time_limit;
-let kvps = location.hash.substr(1).split(',')
-let prev_loc = null;
-for (let entry in kvps) {
-  let kv = kvps[entry].split('=');
-  if (kv[0] == 'timeout') {
-    time_limit = Number(kv[1]);
+let limit_tmr, close_after, cur_loc, retries, sub, time_limit, prev_loc = null
+for (let kv of location.hash.substr(1).split(',')) {
+  let [k, v] = kv.split('=')
+  if (k == 'timeout') {
+    time_limit = Number(v)
   }
-  else if (kv[0] == 'close_after') {
-    close_after = Number(kv[1]);
+  else if (k == 'close_after') {
+    close_after = Number(v)
+  }
+  else {
+    grzDump('unknown arg: ' + k)
   }
 }
 if (time_limit == undefined || time_limit <= 0) {
-  grzDump('No time limit given, using default of 5s\n');
-  time_limit = 5000;
+  grzDump('No time limit given, using default of 5s\n')
+  time_limit = 5000
 } else {
-  grzDump('Using time limit of ' + time_limit + '\n');
+  grzDump('Using time limit of ' + time_limit + '\n')
 }
 
-let main = function(){
+function main() {
   if (sub != null && !sub.closed) {
-    setTimeout(main, 10);
-    return;
+    setTimeout(main, 10)
+    return
   }
   if (close_after != undefined && close_after-- < 1) {
-    grzDump('Hit close limit.\n');
-    window.close();
-    return;
+    grzDump('Hit close limit.\n')
+    window.close()
+    return
   }
 
   // open test
-  sub = open(sub != null ? '/next_test' : '/first_test', 'GrizzlyFuzz');
+  sub = open(sub != null ? '/next_test' : '/first_test', 'GrizzlyFuzz')
   if (sub == null) {
-    setBanner('Error! Could not open window. Blocked by the popup blocker?');
-    grzDump('Could not open test! Blocked by the popup blocker?');
-    return;
+    setBanner('Error! Could not open window. Blocked by the popup blocker?')
+    grzDump('Could not open test! Blocked by the popup blocker?')
+    return
   }
-  sub.addEventListener('beforeunload', function(){
-    clearTimeout(limit_tmr);
-    grzDump('Test case closed\n');
+  sub.addEventListener('beforeunload', () => {
+    clearTimeout(limit_tmr)
+    grzDump('Test case closed\n')
     // check if we are reopening the same page
-    // this seems to be due to loosing sync with the web server
-    if (sub.location != null){
-      try { cur_loc = sub.location.toString(); } catch(err) {}
-    }
+    // this seems to be due to losing sync with the web server
+    try { cur_loc = sub.location.toString() } catch(e) { cur_loc = prev_loc }
     if (cur_loc == prev_loc) {
-      reloads++;
-      if (reloads > 2) {
-        grzDump('Lost sync! Closing Browser.');
-        window.close();
-        return;
+      if (++retries > 2) {
+        grzDump('Lost sync! Closing Browser.')
+        window.close()
+        return
       }
     }
     else {
-      prev_loc = cur_loc;
-      reloads = 0;
+      prev_loc = cur_loc
+      retries = 0
     }
-    setTimeout(main, 10);
-  });
-  limit_tmr = setTimeout(function(){
-    grzDump('Time limit exceeded\n');
+    setTimeout(main, 10)
+  })
+  limit_tmr = setTimeout(() => {
+    grzDump('Time limit exceeded\n')
     if (!sub.closed){
-      grzDump('Closing test case\n');
-      sub.close();
+      grzDump('Closing test case\n')
+      sub.close()
     }
-  }, time_limit);
-};
-
-window.onload = function(){
-  // update banner
-  setBanner('&#x1f43b; &sdot; Grizzly Harness &sdot; &#x1f98a;');
-  main();
+  }, time_limit)
 }
 
-window.addEventListener('beforeunload', function(){
-  clearTimeout(limit_tmr);
-  grzDump('Cleaning up\n');
+window.onload = () => {
+  // update banner
+  setBanner('&#x1f43b; &sdot; Grizzly Harness &sdot; &#x1f98a;')
+  main()
+}
+
+window.addEventListener('beforeunload', () => {
+  clearTimeout(limit_tmr)
+  grzDump('Cleaning up\n')
   if (!sub.closed) {
-    sub.close();
+    sub.close()
   }
-});
+})
 </script>
 </head>
 <body style='background-color:#E5E4E2'>
