--- a/grizzly/corpman/harness.html
+++ b/grizzly/corpman/harness.html
@@ -9,10 +9,10 @@ function grzDump(msg) {
 }
 
 function setBanner(msg) {
-  try { document.getElementById('status').innerHTML = msg } catch(e) { grzDump('setBanner error: '+e) }
+  try { document.getElementById('banner').innerHTML = msg } catch(e) { grzDump('setBanner error: ' + e) }
 }
 
-let limit_tmr, close_after, cur_loc, retries, sub, time_limit, prev_loc = null
+let limit_tmr, close_after, retries, sub, time_limit, prev_loc = null
 for (let kv of location.hash.substr(1).split(',')) {
   let [k, v] = kv.split('=')
   if (k == 'timeout') {
@@ -51,6 +51,7 @@ function main() {
     return
   }
   sub.addEventListener('beforeunload', () => {
+    let cur_loc
     clearTimeout(limit_tmr)
     grzDump('Test case closed\n')
     // check if we are reopening the same page
@@ -94,6 +95,6 @@ window.addEventListener('beforeunload', () => {
 </script>
 </head>
 <body style='background-color:#E5E4E2'>
-<h4 id='status'>&#x1f43b; &sdot; Loading...</h4>
+<h4 id='banner'>&#x1f43b; &sdot; Loading...</h4>
 </body>
 </html>
