Wait when the browser is expected to close itself
This gives logs time to complete when using tools such as LSan

--- a/grizzly/corpman/harness.html
+++ b/grizzly/corpman/harness.html
@@ -5,7 +5,7 @@
 <title>&#x1f43b; &sdot; Grizzly &sdot; &#x1f98a;</title>
 <script>
 let close_after, limit_tmr, time_limit
-let force_close = true
+let forced_close = true
 let sub = null
 
 let grzDump = (msg) => {
@@ -47,7 +47,7 @@ let main = () => {
 
   if ((close_after !== undefined) && (close_after-- < 1)) {
     grzDump('Hit close limit.')
-    if (force_close) {
+    if (forced_close) {
       window.location.href = '/close_browser'
     } else {
       setTimeout(window.close, 0)
@@ -86,9 +86,9 @@ window.addEventListener('load', () => {
         time_limit = Number(v)
       } else if (k === 'close_after') {
         close_after = Number(v)
-      } else if (k === 'force_close') {
+      } else if (k === 'forced_close') {
         if (v === 'false' || v === '0') {
-          force_close = false
+          forced_close = false
         }
       } else {
         grzDump(`unknown arg '${k}'`)
