--- a/grizzly/corpman/harness.html
+++ b/grizzly/corpman/harness.html
@@ -32,29 +32,9 @@ function main() {
     return
   }
 
-  sub.addEventListener('DOMContentLoaded', function () {
-    try { cur_loc = sub.location.toString() } catch (e) { cur_loc = prev_loc }
-  })
-
   sub.addEventListener('unload', function () {
     clearTimeout(limit_tmr)
     grzDump('Test case closed\n')
-    // check if we are reopening the same page
-    // this seems to be due to losing sync with the web server
-    if (cur_loc === prev_loc && cur_loc !== orig_loc) {
-      if (++retries > 2) {
-        grzDump('Lost sync! Closing Browser.')
-        window.location = '/close_browser'
-        return
-      }
-    } else {
-      if (orig_loc === undefined) {
-        // set origin location to detect if we are fuzzing (moving) or reducing
-        orig_loc = cur_loc;
-      }
-      prev_loc = cur_loc
-      retries = 0
-    }
     setTimeout(main, 0)
   })
   limit_tmr = setTimeout(() => {
@@ -66,10 +46,8 @@ function main() {
   }, time_limit)
 }
 
-let close_after, limit_tmr, orig_loc, prev_loc, time_limit
-let retries = 0
+let close_after, limit_tmr, time_limit
 let sub = null
-let cur_loc
 for (let kv of location.hash.substr(1).split(',')) {
   let [k, v] = kv.split('=')
   if (k === 'timeout') {
@@ -90,7 +68,7 @@ if (time_limit === undefined || time_limit <= 0) {
 window.onload = () => {
   // update banner
   setBanner('&#x1f43b; &sdot; Grizzly Harness &sdot; &#x1f98a;')
-  main()
+  setTimeout(main, 5000)
 }
 
 window.addEventListener('beforeunload', () => {
