Use console.log() for a cross browser experience

--- a/grizzly/common/harness.html
+++ b/grizzly/common/harness.html
@@ -9,7 +9,7 @@ let forced_close = true
 let sub = null
 
 let grzDump = (msg) => {
-  dump(`[grz harness][${new Date().toUTCString()}] ${msg}\n`)
+  console.log(`[grz harness][${new Date().toUTCString()}] ${msg}\n`)
 }
 
 let setBanner = (msg) => {
