--- a/grizzly/common/harness.html
+++ b/grizzly/common/harness.html
@@ -25,10 +25,6 @@ let setTestTimeout = () => {
     grzDump('Test case time limit already set')
     return
   }
-  if (time_limit === 0) {
-    // test case time limit disabled
-    return
-  }
   limit_tmr = setTimeout(() => {
     grzDump('Test case time limit exceeded')
     if (!sub.closed){
@@ -71,9 +67,12 @@ let main = () => {
   }
 
   // set the test case timeout once the test loading ends
-  sub.addEventListener('abort', setTestTimeout)
-  sub.addEventListener('error', setTestTimeout)
-  sub.addEventListener('load', setTestTimeout)
+  if (time_limit > 0) {
+    grzDump(`Using test case time limit of ${time_limit}`)
+    sub.addEventListener('abort', setTestTimeout)
+    sub.addEventListener('error', setTestTimeout)
+    sub.addEventListener('load', setTestTimeout)
+  }
 
   setTimeout(main, 50)
 }
@@ -95,15 +94,6 @@ window.addEventListener('load', () => {
         grzDump(`unknown arg '${k}'`)
       }
     }
-  }
-
-  if ((time_limit === undefined) || (time_limit < 0)) {
-    time_limit = 15000
-    grzDump(`No valid time limit given, using default of ${time_limit}`)
-  } else if (time_limit > 0) {
-    grzDump(`Using test case time limit of ${time_limit}`)
-  } else {
-    grzDump(`Test case time limit diabled`)
   }
 
   // update banner
