added domato adapter

--- a/grizzly/common/harness.html
+++ b/grizzly/common/harness.html
@@ -116,7 +116,7 @@ window.addEventListener('beforeunload', () => {
 })
 </script>
 </head>
-<body style='background-color:#E5E4E2'>
+<body style='background-color:#0000'>
 <h4 id='banner'>&#x1f43b; &sdot; Loading...</h4>
 </body>
 </html>
