--- a/grizzly/common/harness.html
+++ b/grizzly/common/harness.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=UTF-8>
-<title>&#x1f43b; &sdot; Grizzly &sdot; &#x1f98a;</title>
+<title>Grizzly &sdot; Harness</title>
 <script>
 let close_after, limit_tmr, time_limit
 let sub = null
